# geodatasets

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release_to_pypi.yml  tests.yaml
ci/: dev.yaml  latest.yaml  min.yaml
data_backup/: README.md
doc/source/: api.rst  conf.py  contributing.md  index.md  introduction.ipynb
geodatasets/: __init__.py  api.py  lib.py
geodatasets/json/: database.json
geodatasets/tests/: test_api.py  test_data.py  test_lib.py
xyzdata/: __init__.py  api.py  data.py  lib.py
xyzdata/json/: database.json  providers.json
xyzdata/tests/: test_api.py  test_data.py  test_lib.py
